@@ -38,5 +38,6 @@ subprojects {
 
     tasks.test {
         useJUnitPlatform()
+        jvmArgs("--enable-native-access=ALL-UNNAMED")
     }
 }
